# boot_for_sync

./: .gitignore  Makefile  README.md  config.dist.yaml  pyproject.toml
app/: bootstrap_app.py  config.py  metrics.py  models.py
app/clients/: kafka.py  redis.py  s3.py
app/managers/: control.py
app/services/: bootstrap.py
tests/: conftest.py
tests/unit/bootstrap/: test_bootstrap.py  test_model.py
tests/unit/clients/: test_s3.py
