[tool.poetry]
name = "bootstrap"
version = "0.1.0"
description = ""
authors = ["Никита Долгов <dolgov@mybook.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
aiokafka = "^0.7.2"
aiobotocore = "^2.3.2"
aioredis = "^2.0.1"
sentry-sdk = "^1.6.0"
requests = "2.28"
prometheus-client = "^0.14.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.18.3"
isort = "^5.10.1"
flake8 = "^4.0.1"
yapf = {extras = ["toml"], version = "^0.32.0"}
mypy = "^0.960"
autoflake = "^1.4"
types-aiobotocore = {extras = ["s3"], version = "^2.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
